@@ -3,6 +3,7 @@
 	* debbugs-gnu.el (debbugs-emacs): Don't use widgets to provide
 	clickable links, since that requires you to select certain parts
 	of the line, which is annoying.
+	(debbugs-show-reports): Store the status in the buffer.
 
 2011-07-03  Michael Albinus  <michael.albinus@gmx.de>
 
